# cpp-subs

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  README.rst  conanfile.txt  config.h  config.status  configure  configure.ac  libtool  pgplot_libs  steps-to-make.sh  subsConfig.cmake.in
doc/: Changes.html  Doxyfile.bak  Doxyfile.in  Makefile  Makefile.am  Makefile.in  README  conf.py  docgen.in  genrst.py  index.rst  programs.rst
doc/sphinx/: genrst.py
include/: Makefile  Makefile.am  Makefile.in  trm_array1d.h  trm_array2d.h  trm_binary_star.h  trm_buffer2d.h  trm_card.h  trm_complex.h  trm_constants.h  trm_date.h  trm_ephem.h  trm_format.h  trm_formula.h  trm_fraction.h  trm_header.h  trm_hitem.h  trm_input.h  trm_oldheader.h  trm_oldinput.h  trm_plot.h  trm_poly.h  trm_position.h  trm_star.h  trm_subs.h  trm_telescope.h  trm_time.h  trm_units.h  trm_vec3.h
include/trm/: array1d.h  date.h  header.h  hitem.h  plot.h  position.h  subs.h  time.h
src/: Makefile.am  Makefile.in  amoeba.cc  amoeba_get_psum.cc  bicoln.cc  boxcar.cc  brent.cc  bsstep.cc  byte_swap.cc  centroid.cc  date.cc  dbrent.cc  endian.cc  extinct.cc  factln.cc  fasper.cc  fft.cc  filnam.cc  gammln.cc  gammp.cc  gammq.cc  gap.cc  gauss.cc  gaussj.cc  gcf.cc  genetic.cc  gmon.out  gser.cc  header.cc  interp.cc  jacob.cc  linterp.cc  llsqr.cc  lud.cc  mmid.cc  mnbrak.cc  numdiff.cc  planck.cc  plot.cc  poisson.cc  (+51 more)
