## Process this file with automake to generate Makefile.in
##

include_HEADERS = trm_subs.h trm_time.h trm_position.h trm_input.h trm_date.h trm_star.h \
             trm_binary_star.h trm_ephem.h trm_array1d.h trm_array2d.h trm_constants.h \
             trm_hitem.h trm_header.h trm_telescope.h trm_plot.h trm_vec3.h \
             trm_buffer2d.h trm_getcomm.h trm_complex.h trm_formula.h trm_fraction.h \
             trm_units.h trm_format.h trm_poly.h 


